--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,7 @@ services:
       - ./application:/var/www/app
     ports:
       - "8000:8080"
+    environment:
+      - APP_ENV=dev
     links:
       - mysql
