fazendo uns ajustes nos arquivos do docker e atualizando readme

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     image: ambientum/php:7.2-nginx
     container_name: app
     volumes:
-      - ./application:/var/www/app
+      - ../:/var/www/app
     ports:
       - "8000:8080"
     environment:
