--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -15,7 +15,7 @@ doctrine:
             charset: utf8mb4
             collate: utf8mb4_unicode_ci
 
-        url: '%env(resolve:DATABASE_URL)%'
+        url: 'mysql://cababom:secret@phpcomrapadura-mysql:3306/phpcomrapadura'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
