--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,10 +1,7 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        main:
-            entity:
-                class: App\Entity\Usuario
-
+        in_memory: { memory: ~ }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -17,28 +14,11 @@ security:
             # http_basic: true
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
-            form_login:
-                login_path: /admin/login
-                check_path: /admin/login
-                default_target_path: admin_default_index
-                always_use_default_target_path: true
+            # form_login: true
             # https://symfony.com/doc/current/security/form_login_setup.html
-            logout:
-                path: /logout
-                target: /admin/login
-
-
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin, roles: ROLE_ADMIN }
-
-    role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
-
-    encoders:
-        App\Entity\Usuario:
-            algorithm: bcrypt
-            cost: 12
+        # - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/profile, roles: ROLE_USER }
