--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "php": "^7.1.3",
     "ext-iconv": "*",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
+    "gedmo/doctrine-extensions": "^2.4",
     "sensio/framework-extra-bundle": "^5.1",
     "symfony/asset": "^4.1",
     "symfony/console": "^4.1",
