--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "symfony/validator": "^4.1",
     "symfony/web-link": "^4.1",
     "symfony/webpack-encore-pack": "*",
-    "symfony/yaml": "^4.1"
+    "symfony/yaml": "^4.1",
+    "white-october/pagerfanta-bundle": "^1.2"
   },
   "require-dev": {
     "symfony/debug-pack": "*",
