--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,3 +2,6 @@ twig:
     paths: ['%kernel.project_dir%/templates']
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    globals:
+        path_upload: '/uploads/images/'
+        path_image: '/images/'
