Finalizacao do CRUD de videos

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,6 +2,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'pt_BR'
+    pagination:
+      per_page: 30
 
 services:
     _defaults:
