--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,8 +1,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
-    path_image: '%kernel.project_dir%/public/uploads/images'
+    locale: 'pt_BR'
+    pagination:
+        per_page: 30
+    path_partner: '%kernel.project_dir%/public/uploads/partners'
 
 services:
     # default configuration for services in *this* file
